--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-04 01:47+0900\n"
+"POT-Creation-Date: 2022-02-16 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,6 +53,15 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:17
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:44
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:53
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:62
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:71
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:80
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:89
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:98
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:116
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:125
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -83,7 +92,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"WebSocket subprotocols that should be supported by this client for running subscriptions over websockets. Allowed values are: - `graphql-ws` for the deprecated Apollo protocol - `graphql-transport-ws` for the newer GraphQL over WebSocket protocol If multiple protocols are provided, the actual protocol to be used will be subject to negotiation with the server. To make the client work with the dummy protocol implemented by SmallRye GraphQL 1.4 server-side, leave this empty.\n"
+"WebSocket subprotocols that should be supported by this client for running GraphQL operations over websockets. Allowed values are: - `graphql-ws` for the deprecated Apollo protocol - `graphql-transport-ws` for the newer GraphQL over WebSocket protocol (default value) If multiple protocols are provided, the actual protocol to be used will be subject to negotiation with the server.\n"
 "--"
 msgstr ""
 
@@ -92,3 +101,148 @@ msgstr ""
 #, fuzzy, no-wrap
 msgid "list of string"
 msgstr "string"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:38
+#, no-wrap
+msgid "`graphql-transport-ws`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:43
+#, no-wrap
+msgid ""
+"[[quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.trust-store]]`link:#quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.trust-store[quarkus.smallrye-graphql-client.\"clients\".trust-store]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The trust store location. Can point to either a classpath resource or a file.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:52
+#, no-wrap
+msgid ""
+"[[quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.trust-store-password]]`link:#quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.trust-store-password[quarkus.smallrye-graphql-client.\"clients\".trust-store-password]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The trust store password.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:61
+#, no-wrap
+msgid ""
+"[[quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.trust-store-type]]`link:#quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.trust-store-type[quarkus.smallrye-graphql-client.\"clients\".trust-store-type]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The type of the trust store. Defaults to \"JKS\".\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:70
+#, no-wrap
+msgid ""
+"[[quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.key-store]]`link:#quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.key-store[quarkus.smallrye-graphql-client.\"clients\".key-store]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The key store location. Can point to either a classpath resource or a file.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:79
+#, no-wrap
+msgid ""
+"[[quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.key-store-password]]`link:#quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.key-store-password[quarkus.smallrye-graphql-client.\"clients\".key-store-password]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The key store password.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:88
+#, no-wrap
+msgid ""
+"[[quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.key-store-type]]`link:#quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.key-store-type[quarkus.smallrye-graphql-client.\"clients\".key-store-type]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The type of the key store. Defaults to \"JKS\".\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:97
+#, no-wrap
+msgid ""
+"[[quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.proxy-host]]`link:#quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.proxy-host[quarkus.smallrye-graphql-client.\"clients\".proxy-host]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Hostname of the proxy to use.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:106
+#, no-wrap
+msgid ""
+"[[quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.proxy-port]]`link:#quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.proxy-port[quarkus.smallrye-graphql-client.\"clients\".proxy-port]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Port number of the proxy to use.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:107
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:134
+#, no-wrap
+msgid "int"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:115
+#, no-wrap
+msgid ""
+"[[quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.proxy-username]]`link:#quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.proxy-username[quarkus.smallrye-graphql-client.\"clients\".proxy-username]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Username for the proxy to use.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:124
+#, no-wrap
+msgid ""
+"[[quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.proxy-password]]`link:#quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.proxy-password[quarkus.smallrye-graphql-client.\"clients\".proxy-password]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Password for the proxy to use.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:133
+#, no-wrap
+msgid ""
+"[[quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.max-redirects]]`link:#quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.max-redirects[quarkus.smallrye-graphql-client.\"clients\".max-redirects]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Maximum number of redirects to follow.\n"
+"--"
+msgstr ""
